--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+spring.datasource.platform=mysql
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db
+spring.datasource.username=root
+spring.datasource.password=password
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=create-drop
 
